Prepared the implementation for the geo.* API and implemented the geo.getEvents API call
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/musicview/trunk@11572 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/res/css/tx_musicview_pi1.css
+++ b/res/css/tx_musicview_pi1.css
@@ -700,3 +700,19 @@ div.group_getWeeklyChartList-DIV-method-result {
 }
 /* ###group.getWeeklyChartList### end */
 
+/* ###geo.getEvents### begin */
+TD.geo_getEvents-TD-title-borderline {
+	border-bottom-color:#D3D3D3;
+	border-bottom-style:solid;
+	border-bottom-width:1px; 
+	padding-left: 10px;
+}
+
+/* ###geo.getEvents### end */
+
+/* ###geo.getTopArtists### begin */
+/* ###geo.getTopArtists### end */
+
+/* ###geo.getTopTracks### begin */
+/* ###geo.getTopTracks### end */
+
