Prepared the implementation for the tag.* API
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/musicview/trunk@11629 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/res/css/tx_musicview_pi1.css
+++ b/res/css/tx_musicview_pi1.css
@@ -816,3 +816,6 @@ tr.library_getTracks-TR_CLASS-effect:hover {
 }
 /* ###library.getTracks### end */
 
+/* ###tag.getSimilar### begin */
+
+/* ###tag.getSimilar### end */
