tag.getSimilar method implemented, but the implementation uses 2 seperate requests to display one result (on search)
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/musicview/trunk@11667 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/res/css/tx_musicview_pi1.css
+++ b/res/css/tx_musicview_pi1.css
@@ -817,5 +817,30 @@ tr.library_getTracks-TR_CLASS-effect:hover {
 /* ###library.getTracks### end */
 
 /* ###tag.getSimilar### begin */
+input.tag_getSimilar-INPUT-CLASS-value {
+	border-color:#000000;
+	border-style:solid;
+	border-width:thin;
+	font-family:Verdana, Arial, Helvetica, sans-serif;
+	font-size:10px;
+}
 
+input.tag_getSimilar-INPUT-CLASS-submit {
+	border-color:#000000;
+	border-style:solid;
+	border-width:thin;
+	font-family:Verdana, Arial, Helvetica, sans-serif;
+	font-size:10px;
+}
+
+tr.tag_getSimilar-TR-CLASS-tagurlname {
+	height:30px;
+}
+
+td.tag_getSimilar-TD-CLASS-tagurlname {
+	border-bottom-width:1px;
+	border-bottom-color:#D3D3D3;
+	border-bottom-style:solid;
+}
 /* ###tag.getSimilar### end */
+
