git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/musicview/trunk@11689 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/res/user.getTopArtists.tmpl
+++ b/res/user.getTopArtists.tmpl
@@ -5,11 +5,11 @@
 				<td width="3%" align="right">
 					###ARTIST_ATTR_RANK###
 				</td>
-				<td width="5%">
+				<td title="###ARTIST_NAME###, played ###ARTIST_PLAYCOUNT### times" width="5%">
 					###ARTIST_IMAGE###
 				</td>
 				<td>
-					<div>
+					<div title="###ARTIST_NAME###, played ###ARTIST_PLAYCOUNT### times">
 						<b>###ARTIST_URLNAME###</b>
 					</div>
 				</td>
