--- a/res/css/tx_musicview_pi1.css
+++ b/res/css/tx_musicview_pi1.css
@@ -929,22 +929,22 @@ div.tag_getTopTags-DIV-chart-text {
 /* ###tag.getTopTags### end */
 
 /* ###tag.getTopTracks### begin */
-table.tag_getLovedTracks-TABLE {
+table.tag_getTopTracks-TABLE {
 	text-align:left;
-	width: 300px;
+	width: 600px;
 }
 
-tr.tag_getLovedTracks-TR_CLASS-effect {
+tr.tag_getTopTracks-TR_CLASS-effect {
 	height: 50px;
 }
 
-tr.tag_getLovedTracks-TR_CLASS-effect td {
+tr.tag_getTopTracks-TR_CLASS-effect td {
 	border-bottom-width:1px;
 	border-bottom-color:#D3D3D3;
 	border-bottom-style:solid;
 } 
 
-tr.tag_getLovedTracks-TR_CLASS-effect:hover {
+tr.tag_getTopTracks-TR_CLASS-effect:hover {
 	background-color:#FF3300;
 }
 /* ###tag.getTopTracks### end */
