album.getInfo implemented
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/musicview/trunk@11697 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/res/css/tx_musicview_pi1.css
+++ b/res/css/tx_musicview_pi1.css
@@ -948,3 +948,25 @@ tr.tag_getTopTracks-TR_CLASS-effect:hover {
 	background-color:#FF3300;
 }
 /* ###tag.getTopTracks### end */
+
+/* ###album.getInfo### begin */
+table.album_getInfo-TABLE {
+	text-align:left;
+	width: 600px;
+}
+
+tr.album_getInfo-TR_CLASS-effect {
+	height: 50px;
+}
+
+tr.album_getInfo-TR_CLASS-effect td {
+	border-bottom-width:1px;
+	border-bottom-color:#D3D3D3;
+	border-bottom-style:solid;
+} 
+
+tr.album_getInfo-TR_CLASS-effect:hover {
+	background-color:#FF3300;
+}
+/* ###album.getInfo### begin */
+
