--- a/res/css/tx_musicview_pi1.css
+++ b/res/css/tx_musicview_pi1.css
@@ -1066,3 +1066,24 @@ div.artist_getEvents-DIV-venue {
 	padding-top:5px;
 }
 /* ###artist.getEvents### end */
+
+/* ###artist.getInfo### begin */
+table.artist_getInfo-TABLE {
+	text-align:left;
+	width: 600px;
+}
+
+tr.artist_getInfo-TR_CLASS-effect {
+	height: 50px;
+}
+
+tr.artist_getInfo-TR_CLASS-effect td {
+	border-bottom-width:1px;
+	border-bottom-color:#D3D3D3;
+	border-bottom-style:solid;
+} 
+
+tr.artist_getInfo-TR_CLASS-effect:hover {
+	background-color:#FF3300;
+}
+/* ###artist.getInfo### begin */
