--- a/res/css/tx_musicview_pi1.css
+++ b/res/css/tx_musicview_pi1.css
@@ -1086,4 +1086,53 @@ tr.artist_getInfo-TR_CLASS-effect td {
 tr.artist_getInfo-TR_CLASS-effect:hover {
 	background-color:#FF3300;
 }
-/* ###artist.getInfo### begin */
+/* ###artist.getInfo### end */
+
+/* ###artist.getSimilar### begin */
+table.artist_getSimilar-TABLE {
+	text-align:left;
+	width: 600px;
+}
+/* ###artist.getSimilar### end */
+
+/* ###artist.getTopAlbums### begin */
+table.artist_getTopAlbums-TABLE {
+	text-align:left;
+	width: 600px;
+}
+
+tr.artist_getTopAlbums-TR_CLASS-effect {
+	height: 50px;
+}
+
+tr.artist_getTopAlbums-TR_CLASS-effect td {
+	border-bottom-width:1px;
+	border-bottom-color:#D3D3D3;
+	border-bottom-style:solid;
+} 
+
+tr.artist_getTopAlbums-TR_CLASS-effect:hover {
+	background-color:#FF3300;
+}
+/* ###artist.getTopAlbums### end */
+
+/* ###artist.getTopFans### begin */
+table.artist_getTopFans-TABLE {
+	text-align:left;
+	width: 600px;
+}
+
+tr.artist_getTopFans-TR_CLASS-effect {
+	height: 50px;
+}
+
+tr.artist_getTopFans-TR_CLASS-effect td {
+	border-bottom-width:1px;
+	border-bottom-color:#D3D3D3;
+	border-bottom-style:solid;
+} 
+
+tr.artist_getTopFans-TR_CLASS-effect:hover {
+	background-color:#FF3300;
+}
+/* ###artist.getTopFans### end */
