--- a/res/css/tx_musicview_pi1.css
+++ b/res/css/tx_musicview_pi1.css
@@ -1136,3 +1136,123 @@ tr.artist_getTopFans-TR_CLASS-effect:hover {
 	background-color:#FF3300;
 }
 /* ###artist.getTopFans### end */
+
+/* ###artist.getTopTags### begin */
+table.artist_getTopTags-TABLE {
+	text-align:left;
+	width: 400px;
+}
+
+tr.artist_getTopTags-TABLE-TR-light {
+	background-color:#FFF4D3;
+}
+
+tr.artist_getTopTags-TABLE-TR-lighter {
+	background-color:#FFEAA8;
+}
+
+tr.artist_getTopTags-TR_CLASS-effect:hover {
+	background-color:#FF3300;
+}
+
+div.artist_getTopTags-DIV-chart {
+	background: url(../img/chart_yellow.png) no-repeat right top;
+	overflow: hidden;
+}
+
+div.artist_getTopTags-DIV-chart span {
+	background:#FECB31; 
+	color:#FFFFFF;
+	display: block; 
+	height: 17px;
+	margin: 0 3px 0 0;
+	overflow:hidden;
+	padding-bottom:3px;
+	padding-left:5px;
+	padding-right:5px;
+	padding-top:0;
+}
+
+div.artist_getTopTags-DIV-chart-text {
+	margin-top:-15px;
+	padding-left:4px;
+}
+/* ###artist.getTopTags### end */
+
+/* ###artist.getTopTracks### begin */
+table.artist_getTopTracks-TABLE {
+	text-align:left;
+	width: 400px;
+}
+
+tr.artist_getTopTracks-TR_CLASS-effect {
+	height: 50px;
+}
+
+tr.artist_getTopTracks-TR_CLASS-effect td {
+	border-bottom-width:1px;
+	border-bottom-color:#D3D3D3;
+	border-bottom-style:solid;
+} 
+
+tr.artist_getTopTracks-TR_CLASS-effect:hover {
+	background-color:#FF3300;
+}
+/* ###artist.getTopTracks### end */
+
+/* ###event.getInfo### begin */
+DIV.event_getInfo-DIV {
+	margin-bottom:5px;
+	padding:2px 2px 2px 2px;
+}
+
+
+TABLE.event_getInfo-TABLE {
+	border-color:#D3D3D3;
+	border-style:solid;
+	border-width:1px;
+	width:100%;
+}
+
+span.event_getInfo-SPAN-title {
+	font-size:medium;
+	font-weight:bolder;
+}
+
+td.event_getInfo-TD-image {
+	text-align:center;
+}
+
+span.event_getInfo-SPAN-headliner {
+	font-style:italic;
+	font-size:12px;
+}
+
+div.event_getInfo-DIV-line {
+	border-bottom-color:#D3D3D3;
+	border-bottom-style:solid;
+	border-bottom-width:1px;
+	height:10px;
+	margin-bottom:10px;
+}
+
+td.event_getInfo-TD-artists {
+	vertical-align:top;
+}
+div.event_getInfo-DIV-venue {
+	border-color:#000000;
+	border-style:solid;
+	border-width:1px;
+	padding-bottom:5px;
+	padding-left:5px;
+	padding-right:5px;
+	padding-top:5px;
+}
+/* ###event.getInfo### end */
+
+/* ###track.getInfo### begin */
+table.track_getInfo-TABLE {
+	text-align:left;
+	width: 600px;
+}
+/* ###track_getInfo### end */
