--- a/res/user/user.getNeighbours.tmpl
+++ b/res/user/user.getNeighbours.tmpl
@@ -1,19 +1,18 @@
 ###TEMPLATE###
 	###NEIGHBOURS_ATTR_USER###
 	<br />
-	
-	<table class="user_getNeighbours-TABLE" cellspacing="0px" cellpadding="2px">
+	<table class="tx_musicview_pi1-TABLE-chart" cellspacing="0px" cellpadding="2px">
 		<!-- ###TEMPLATE_USER### begin -->
-			<tr class="user_getNeighbours-TR-CLASS">
+			<tr class="###TEMPLATE_CHART_TR_CLASS-EFFECT### tx_musicview_pi1-TR-chart-mouseover-effect">
 				<td width="5%">
 					###USER_IMAGE###
 				</td>
 				<td>
-					<div style="width:###USER_MATCH###%;" class="user_getNeighbours-DIV-chart">
+					<div style="width:###USER_MATCH###%;" class="tx_musicview_pi1-DIV-chart-background">
 						<span>
 						</span>
 					</div>
-					<div class="user_getNeighbours-DIV-chart-text">
+					<div class="tx_musicview_pi1-DIV-chart-text">
 						###USER_URLNAME### (###USER_MATCH###)
 					</div>
 				</td>
