--- a/res/user/user.getPlaylists.tmpl
+++ b/res/user/user.getPlaylists.tmpl
@@ -1,7 +1,7 @@
 <!-- ###TEMPLATE### begin -->
-	###PLAYLISTS_ATTR_USER###
+	<b>###PLAYLISTS_ATTR_USER###</b>:
 	<!-- ###TEMPLATE_PLAYLIST### begin -->
-		<table class="user_getPlaylists-TABLE">
+		<table class="tx_musicview_pi1-TABLE-playlist">
 			<tbody>
 				<tr>
 					<td>
