--- a/res/user/user.getRecentTracks.tmpl
+++ b/res/user/user.getRecentTracks.tmpl
@@ -1,9 +1,9 @@
 ###TEMPLATE###
-	###RECENTTRACKS_ATTR_USER###
+	<b>###RECENTTRACKS_ATTR_USER###</b>:
 	<br />
-	<table class="user_getRecentTracks-TABLE" cellspacing="0px" cellpadding="2px">
+	<table class="tx_musicview_pi1-TABLE-detail" cellspacing="0px" cellpadding="2px">
 		<!-- ###TEMPLATE_TRACK### begin -->
-			<tr class="user_getRecentTracks_TR_CLASS-effect">
+			<tr class="tx_musicview_pi1-TR-mouseover-effect">
 				<td width="5%">
 					###TRACK_IMAGE###
 				</td>
