--- a/res/user/user.getTopTags.tmpl
+++ b/res/user/user.getTopTags.tmpl
@@ -1,16 +1,15 @@
 ###TEMPLATE###
-	###TOPTAGS_ATTR_USER###
+	<b>###TOPTAGS_ATTR_USER###</b>:
 	<br />
-	
-	<table class="user_getTopTags-TABLE" cellspacing="0px" cellpadding="2px">
+	<table class="tx_musicview_pi1-TABLE-chart" cellspacing="0px" cellpadding="2px">
 		<!-- ###TEMPLATE_TAG### begin -->
-			<tr class="###TEMPLATE_CHART_TR_CLASS-EFFECT### user_getTopTags-TR_CLASS-effect">
+			<tr class="###TEMPLATE_CHART_TR_CLASS-EFFECT### tx_musicview_pi1-TR-chart-mouseover-effect">
 				<td>
-					<div style="width:###TEMPLATE_CHART_DIV_WIDTH###%;" class="user_getTopTags-DIV-chart">
+					<div style="width:###TEMPLATE_CHART_DIV_WIDTH###%;" class="tx_musicview_pi1-DIV-chart-background">
 						<span>
 						</span>
 					</div>
-					<div class="user_getTopTags-DIV-chart-text">
+					<div class="tx_musicview_pi1-DIV-chart-text">
 						###TAG_URLNAME###
 					</div>
 				</td>
