--- a/res/user/user.getPastEvents.tmpl
+++ b/res/user/user.getPastEvents.tmpl
@@ -2,28 +2,28 @@
 	<br />
 	<b>###EVENTS_ATTR_USER###</b>:
 	<!-- ###TEMPLATE_EVENT### begin -->
-		<table class="artist_getEvents-TABLE">
+		<table class="tx_musicview_pi1-TABLE-boxed">
 			<tbody>
 				<tr>
 					<td colspan="3">
-						<span class="artist_getEvents-SPAN-title">
+						<span class="tx_musicview_pi1-SPAN-title">
 							###EVENT_LINKTITLE###
 						</span>
 						(###EVENT_STARTDATE###)
 					</td>
 				</tr>
 				<tr>
-					<td class="artist_getEvents-TD-image" width="10%">
+					<td class="tx_musicview_pi1-TD-image" width="10%">
 						###EVENT_IMAGE###
 					</td>
-					<td class="artist_getEvents-TD-artists">
+					<td class="tx_musicview_pi1-TD-valign-top">
 						<!-- ###TEMPLATE_ARTISTS### begin -->
 							<b>###TMPL_EVENT_MARKER_HEADLINER###</b> <br />
-							<span class="artist_getEvents-SPAN-headliner">
+							<span class="tx_musicview_pi1-SPAN-italic-title">
 								###ARTISTS_HEADLINER###
 							</span>
 							<br />
-							<div class="artist_getEvents-DIV-line" /></div>
+							<div class="tx_musicview_pi1-DIV-line"></div>
 							<b>###TMPL_EVENT_MARKER_ARTISTS###</b> <br />
 							<!-- ###TEMPLATE_ARTIST### begin -->
 								###ARTIST_CONTENT### <br />
@@ -32,7 +32,7 @@
 					</td>
 					<td width="150px">
 						<!-- ###TEMPLATE_VENUE### begin -->
-							<div class="artist_getEvents-DIV-venue">
+							<div class="tx_musicview_pi1-DIV-table-box">
 								<h2>
 									###VENUE_URLNAME###
 								</h2>
