--- a/res/user/user.getTopAlbums.tmpl
+++ b/res/user/user.getTopAlbums.tmpl
@@ -1,7 +1,7 @@
 ###TEMPLATE###
-	<table class="user_getTopAlbums-TABLE" cellspacing="0px" cellpadding="2px">
+	<table class="tx_musicview_pi1-TABLE-detail" cellspacing="0px" cellpadding="2px">
 		<!-- ###TEMPLATE_ALBUM### begin -->
-			<tr class="user_getTopAlbums-TR_CLASS-effect">
+			<tr class="tx_musicview_pi1-TR-mouseover-effect">
 				<td width="3%" align="right">
 					###ALBUM_ATTR_RANK###
 				</td>
