--- a/res/css/tx_musicview_pi1.css
+++ b/res/css/tx_musicview_pi1.css
@@ -17,6 +17,7 @@ div.tx_musicview_pi1-DIV-head {
 }
 
 div.tx_musicview_pi1-DIV-text {
+	font-size:11px;
 	height:70px;
 	margin-top: 25px;
 	margin-left:30px;
@@ -74,7 +75,7 @@ div.tx_musicview_pi1-DIV-chart-background span {
 }
 
 div.tx_musicview_pi1-DIV-chart-text {
-	margin-top:-15px;
+	margin-top:-17px;
 	padding-left:4px;
 }
 
@@ -150,6 +151,7 @@ select.tx_musicview_pi1-SELECT-method {
 }
 
 table.tx_musicview_pi1-TABLE-detail {
+	font-size:11px;
 	text-align:left;
 	width:600px;
 }
@@ -158,10 +160,12 @@ table.tx_musicview_pi1-TABLE-boxed {
 	border-color:#D3D3D3;
 	border-style:solid;
 	border-width:1px;
+	font-size:11px;
 	width:600px;
 }
 
 table.tx_musicview_pi1-TABLE-chart {
+	font-size:11px;
 	text-align:left;
 	width: 400px;
 }
@@ -171,6 +175,7 @@ table.tx_musicview_pi1-TABLE-playlist {
 	border-color:#000000;
 	border-style:solid;
 	border-width:2px;
+	font-size:11px;
 	margin-bottom:5px;
 	padding:5px 5px 5px 5px;
 	width: 280px;
@@ -223,3 +228,21 @@ tr.tx_musicview_pi1-TR-chart-background1 {
 tr.tx_musicview_pi1-TR-chart-background2 {
 	background-color:#FFEAA8;
 }
+
+/* tx_musicview_pi2 */
+table.tx_musicview_pi2-TABLE-search {
+	border-color: #000000;
+	border-style: solid;
+	border-width: 1px;
+	width: 600px;
+}
+
+tr.tx_musicview_pi2-TR-border-top {
+	border-top-color: #000000;
+	border-top-style: solid;
+	border-top-width: 1px;
+}
+
+tr.tx_musicview_pi2-TR-title {
+	background-color:#FECB31;
+} 
